Squashed commit of the following:
commit 1b83dcf7bee9f2312c1e8976f09f2dab446028f3
Author: Daniel <dhaavi@users.noreply.github.com>
Date:   Wed May 24 10:46:00 2023 +0200

    Bump portmaster module version

commit 3228685e0e43e5d079266959662031a5e0211a7c
Author: Daniel <dhaavi@users.noreply.github.com>
Date:   Wed May 24 10:45:06 2023 +0200

    Update country center API path

commit 2bd7c53901af697cbf6c8c6ff4c60ba952f3b24d
Author: Daniel <dhaavi@users.noreply.github.com>
Date:   Wed May 24 10:44:52 2023 +0200

    Show Mbit/s instead of MB/s

commit 675d8b25c8ade00cbec547e71af7d574d0e4cd72
Merge: f7b500a 82bdf34
Author: Daniel Hovie <dhaavi@users.noreply.github.com>
Date:   Wed May 24 10:29:24 2023 +0200

    Merge pull request #447 from safing/feature/spn-map-revamp

    Minor improvements to SPN page (addendum)

commit f7b500a56b3b3dde7b7ef7e8e88880b5aea4f84a
Merge: e328964 064bdd4
Author: Daniel Hovie <dhaavi@users.noreply.github.com>
Date:   Tue May 23 14:00:00 2023 +0200

    Merge pull request #440 from safing/feature/spn-map-revamp

    Major SPN map revamp

commit 82bdf3410076a6f5c3e30d8d33e46a6a7ade42b6
Author: Patrick Pacher <patrick.pacher@gmail.com>
Date:   Tue May 23 11:36:47 2023 +0200

    Minor improvements to SPN page

commit 064bdd47321c44ad2073cb689f6e3a2ed2a8eb15
Author: Patrick Pacher <patrick.pacher@gmail.com>
Date:   Tue May 23 09:29:22 2023 +0200

    Implement review suggestions, add "logout completely" button and only show prompt icon when globally enabled or pending prompts are available

commit 2358e315d02aa2ea74cb135a36b2897c2a6c2860
Author: Patrick Pacher <patrick.pacher@gmail.com>
Date:   Tue May 16 11:37:40 2023 +0200

    Finished migration to angular 16

commit 6481d0923c971ef4aaf9c12cc9ea3386adc8b13f
Author: Patrick Pacher <patrick.pacher@gmail.com>
Date:   Tue May 16 10:40:45 2023 +0200

    Finished update to angular@16

commit f4c946899befe41a863f3cac9f27d76bf9afa02b
Author: Patrick Pacher <patrick.pacher@gmail.com>
Date:   Tue

--- a/modules/portmaster/tsconfig.json
+++ b/modules/portmaster/tsconfig.json
@@ -22,7 +22,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "module": "es2020",
     "lib": [
       "es2018",
@@ -31,7 +31,8 @@
     "types": [
       "./src/electron-app.d.ts",
       "chrome"
-    ]
+    ],
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
